<resources>
    <string name="app_name">Clock</string>
    <string name="add_alarm">添加闹钟</string>
    <string name="title_activity_play_alarm">PlayAlarmActivity</string>
    <string name="play_sound">播放闹钟声音</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="reset">重启</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="lap">计时</string>
</resources>